sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:8: error: reassignment to val
				minpos = j
                                       ^AlgSelectionSort:12: error: reassignment to val
	i=minpos
         ^AlgSelectionSort:13: error: reassignment to val
	minpos=temp
              ^